[package]
name = "censor"
version = "0.1.0"
description = "Bindings for the 'censor' Rust crate."
authors = ["Clover Johnson and Kai Schmidt"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
censor = "0.3.0"