[package]
name = "censor"
version = "0.2.0"
description = "Bindings for the 'rustrict' Rust crate."
authors = ["Clover Johnson and Finn Bear"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
rustrict = "0.7.21"