[package]
name = "bartender"
version = "0.1.0"
edition = "2018"
authors = ["Clover Johnson <clover.johnson@mailfence.com>"]

[dependencies]
rustler = { version = "0.31", default-features = false, features = ["derive"] }
rustrict = "0.7.24"
once_cell = "1.19.0"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[lib]
crate-type = ["cdylib"]
name = "bartender"
path = "src/lib.rs"
